[gd_scene load_steps=5 format=3 uid="uid://cw2iwg2qex8yn"]

[ext_resource type="Script" uid="uid://d2mwmf1lyo7ui" path="res://scene/game/rashodniki_shop/rashodniki_shop.gd" id="1_1vg3k"]
[ext_resource type="Texture2D" uid="uid://delj0idpqxb0v" path="res://aaasets/items/hot_oil_big.png" id="2_1vg3k"]
[ext_resource type="Texture2D" uid="uid://bnk5ypsrtmtav" path="res://aaasets/frame/rashodnik_frame_27.png" id="2_pq6q0"]
[ext_resource type="Texture2D" uid="uid://cnrktds1o5akq" path="res://aaasets/items/grenade_green.png" id="4_7633t"]

[node name="RashodnikiShop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1vg3k")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 28
text = "Back"

[node name="Coins" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
theme_override_font_sizes/font_size = 28
text = "Coins: 0"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ColorRect1" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
texture = ExtResource("2_pq6q0")

[node name="Slot1" type="TextureRect" parent="VBoxContainer/HBoxContainer2/ColorRect1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -95.0
offset_right = 65.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
texture = ExtResource("4_7633t")
stretch_mode = 3

[node name="QuantitySlot1" type="Label" parent="VBoxContainer/HBoxContainer2/ColorRect1"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -41.0
offset_top = -50.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "10"

[node name="ColorRect2" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
texture = ExtResource("2_pq6q0")

[node name="Slot2" type="TextureRect" parent="VBoxContainer/HBoxContainer2/ColorRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -95.0
offset_right = 65.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
texture = ExtResource("4_7633t")
stretch_mode = 3

[node name="QuantitySlot2" type="Label" parent="VBoxContainer/HBoxContainer2/ColorRect2"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -41.0
offset_top = -50.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "10"

[node name="ColorRect3" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
texture = ExtResource("2_pq6q0")

[node name="Slot3" type="TextureRect" parent="VBoxContainer/HBoxContainer2/ColorRect3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -95.0
offset_right = 65.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
texture = ExtResource("4_7633t")
stretch_mode = 3

[node name="QuantitySlot3" type="Label" parent="VBoxContainer/HBoxContainer2/ColorRect3"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -41.0
offset_top = -50.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "10"

[node name="PreviewPanel" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
alignment = 1

[node name="SkinSprite" type="TextureRect" parent="VBoxContainer/PreviewPanel"]
custom_minimum_size = Vector2(220, 220)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_1vg3k")
stretch_mode = 3

[node name="Name" type="Label" parent="VBoxContainer/PreviewPanel"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 42
text = "Hot Oil"

[node name="Description" type="Label" parent="VBoxContainer/PreviewPanel"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 26
text = "-Anti Freeze"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 3

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Back" to="." method="_on_back_pressed"]
